Surround filename with quotes when executing a native md5 checksum application. Use an array to pass on the command